// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonGroup adding additional props 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c5 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2 :hover input:not([disabled])+div,
.c2 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .c5 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    role="radiogroup"
  >
    <label
      class="c2"
      for="ONE"
    >
      <div
        class="c1 "
      >
        <input
          class="c3"
          id="ONE"
          name="test"
          tabindex="0"
          type="radio"
          value="1"
        />
        <div
          class="c4 "
        />
      </div>
    </label>
    <div
      class="c5"
    />
    <label
      class="c2"
      for="TWO"
    >
      <div
        class="c1 "
      >
        <input
          class="c3"
          id="TWO"
          name="test"
          tabindex="-1"
          type="radio"
          value="2"
        />
        <div
          class="c4 "
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioButtonGroup boolean options 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2 :hover input:not([disabled])+div,
.c2 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c5 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    role="radiogroup"
  >
    <label
      class="c2"
      for="true"
    >
      <div
        class="c1 "
      >
        <input
          checked=""
          class="c3"
          id="true"
          name="test"
          tabindex="0"
          type="radio"
          value="true"
        />
        <div
          class="c4 "
        >
          <svg
            class="c5"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </div>
      </div>
      <span
        class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
      >
        true
      </span>
    </label>
    <div
      class="c6"
    />
    <label
      class="c2"
      for="false"
    >
      <div
        class="c1 "
      >
        <input
          class="c3"
          id="false"
          name="test"
          tabindex="-1"
          type="radio"
          value="false"
        />
        <div
          class="c4 "
        />
      </div>
      <span
        class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
      >
        false
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioButtonGroup children 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c5 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2 :hover input:not([disabled])+div,
.c2 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .c4 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    role="radiogroup"
  >
    <label
      class="c2"
      for="one"
    >
      <div
        class="c1 "
      >
        <input
          checked=""
          class="c3"
          id="one"
          name="test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="c4"
        />
      </div>
    </label>
    <div
      class="c5"
    />
    <label
      class="c2"
      for="two"
    >
      <div
        class="c1 "
      >
        <input
          class="c3"
          id="two"
          name="test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="c4"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioButtonGroup defaultValue 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2 :hover input:not([disabled])+div,
.c2 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c5 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 6px;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <label
        class="c2"
        for="one"
      >
        <div
          class="c1 "
        >
          <input
            checked=""
            class="c3"
            id="one"
            name="test"
            tabindex="0"
            type="radio"
            value="one"
          />
          <div
            class="c4 "
          >
            <svg
              class="c5"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          one
        </span>
      </label>
      <div
        class="c6"
      />
      <label
        class="c2"
        for="two"
      >
        <div
          class="c1 "
        >
          <input
            class="c3"
            id="two"
            name="test"
            tabindex="-1"
            type="radio"
            value="two"
          />
          <div
            class="c4 "
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          two
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioButtonGroup number options 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2 :hover input:not([disabled])+div,
.c2 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c5 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    role="radiogroup"
  >
    <label
      class="c2"
      for="1"
    >
      <div
        class="c1 "
      >
        <input
          checked=""
          class="c3"
          id="1"
          name="test"
          tabindex="0"
          type="radio"
          value="1"
        />
        <div
          class="c4 "
        >
          <svg
            class="c5"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </div>
      </div>
      <span
        class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
      >
        1
      </span>
    </label>
    <div
      class="c6"
    />
    <label
      class="c2"
      for="2"
    >
      <div
        class="c1 "
      >
        <input
          class="c3"
          id="2"
          name="test"
          tabindex="-1"
          type="radio"
          value="2"
        />
        <div
          class="c4 "
        />
      </div>
      <span
        class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
      >
        2
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioButtonGroup object options 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c5 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2 :hover input:not([disabled])+div,
.c2 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .c5 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    role="radiogroup"
  >
    <label
      class="c2"
      for="onE"
    >
      <div
        class="c1 "
      >
        <input
          class="c3"
          id="onE"
          name="test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="c4 "
        />
      </div>
      <span
        class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
      >
        One
      </span>
    </label>
    <div
      class="c5"
    />
    <label
      class="c2"
      for="twO"
    >
      <div
        class="c1 "
      >
        <input
          class="c3"
          id="twO"
          name="test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="c4 "
        />
      </div>
      <span
        class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
      >
        Two
      </span>
    </label>
  </div>
</div>
`;

exports[`RadioButtonGroup object options disabled 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c5 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  opacity: 0.5;
  cursor: default;
}

.c2 :hover input:not([disabled])+div,
.c2 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c6 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c6 :hover input:not([disabled])+div,
.c6 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
}

.c7 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

@media only screen and (max-width: 768px) {
  .c5 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    role="radiogroup"
  >
    <label
      class="c2"
      disabled=""
    >
      <div
        class="c1 "
      >
        <input
          class="c3"
          disabled=""
          name="test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="c4 "
        />
      </div>
    </label>
    <div
      class="c5"
    />
    <label
      class="c6"
    >
      <div
        class="c1 "
      >
        <input
          class="c7"
          name="test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="c4 "
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioButtonGroup object options just value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c5 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2 :hover input:not([disabled])+div,
.c2 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c6 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
}

@media only screen and (max-width: 768px) {
  .c5 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    role="radiogroup"
  >
    <label
      class="c2"
    >
      <div
        class="c1 "
      >
        <input
          class="c3"
          name="test"
          tabindex="-1"
          type="radio"
          value="one"
        />
        <div
          class="c4 "
        />
      </div>
    </label>
    <div
      class="c5"
    />
    <label
      class="c2"
    >
      <div
        class="c1 "
      >
        <input
          checked=""
          class="c3"
          name="test"
          tabindex="0"
          type="radio"
          value="two"
        />
        <div
          class="c4 "
        >
          <svg
            class="c6"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioButtonGroup should have no accessibility violations 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2 :hover input:not([disabled])+div,
.c2 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      role="radiogroup"
    >
      <label
        class="c2"
        for="option1"
      >
        <div
          class="c1 "
        >
          <input
            class="c3"
            id="option1"
            name="test"
            tabindex="0"
            type="radio"
            value="option1"
          />
          <div
            class="c4 "
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          option1
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioButtonGroup string options 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
}

.c6 {
  flex: 0 0 auto;
  align-self: stretch;
  height: 12px;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c2 :hover input:not([disabled])+div,
.c2 :hover input:not([disabled])+span {
  border-color: #000000;
}

.c3 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c5 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
}

@media only screen and (max-width: 768px) {
  .c6 {
    height: 6px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
    role="radiogroup"
  >
    <label
      class="c2"
      for="one"
    >
      <div
        class="c1 "
      >
        <input
          checked=""
          class="c3"
          id="one"
          name="test"
          tabindex="0"
          type="radio"
          value="one"
        />
        <div
          class="c4 "
        >
          <svg
            class="c5"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 24 24"
          >
            <circle
              cx="12"
              cy="12"
              r="6"
            />
          </svg>
        </div>
      </div>
      <span
        class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
      >
        one
      </span>
    </label>
    <div
      class="c6"
    />
    <label
      class="c2"
      for="two"
    >
      <div
        class="c1 "
      >
        <input
          class="c3"
          id="two"
          name="test"
          tabindex="-1"
          type="radio"
          value="two"
        />
        <div
          class="c4 "
        />
      </div>
      <span
        class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
      >
        two
      </span>
    </label>
  </div>
</div>
`;
